--- a/languages/wp-data-sync-woocommerce.pot
+++ b/languages/wp-data-sync-woocommerce.pot
@@ -1,15 +1,15 @@
-# Copyright (C) 2020 KevinBrent
+# Copyright (C) 2020 WP Data Sync
 # This file is distributed under the same license as the WP Data Sync - WooCommerce plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Data Sync - WooCommerce 1.0\n"
+"Project-Id-Version: WP Data Sync - WooCommerce 1.0.3\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-data-sync-woocommerce\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-02-23T22:50:14+00:00\n"
+"POT-Creation-Date: 2020-03-04T17:21:55+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.1.0\n"
 "X-Domain: wp-data-sync-woocommerce\n"
@@ -19,8 +19,7 @@ msgid "WP Data Sync - WooCommerce"
 msgstr ""
 
 #. Plugin URI of the plugin
-#. Author URI of the plugin
-msgid "https://wpdatasync.com"
+msgid "https://wpdatasync.com/products/"
 msgstr ""
 
 #. Description of the plugin
@@ -28,5 +27,9 @@ msgid "Sync raw product data into your WooCommerce Store."
 msgstr ""
 
 #. Author of the plugin
-msgid "KevinBrent"
+msgid "WP Data Sync"
+msgstr ""
+
+#. Author URI of the plugin
+msgid "https://wpdatasync.com"
 msgstr ""
